src/test/ui/structs/incomplete-fn-in-struct-definition.rs
fn main() {}

struct S {
    fn //~ ERROR expected identifier, found keyword `fn`
}
